src/types/tests/snapshots/tgbot__types__tests__input__input_profile_photo-3.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "animation": "url",
  "main_frame_timestamp": "1.0",
  "type": "animated"
}
