src/types/tests/snapshots/tgbot__types__tests__input__input_profile_photo-4.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "photo": "url",
  "type": "static"
}
