src/types/tests/snapshots/tgbot__types__tests__input__input_story_content-2.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "__attachments__": [
    {
      "id": "tgbot_file_1",
      "mime_type": null,
      "name": null
    }
  ],
  "photo": "attach://tgbot_file_1",
  "type": "photo"
}
