src/types/tests/snapshots/tgbot__types__tests__input__input_story_content-3.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "type": "video",
  "video": "url"
}
