src/types/tests/snapshots/tgbot__types__tests__input__input_story_content-5.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "cover_frame_timestamp": "1",
  "duration": "1",
  "is_animation": "true",
  "type": "video",
  "video": "url"
}
