src/types/tests/snapshots/tgbot__types__tests__input__input_story_content.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "photo": "url",
  "type": "photo"
}
